<resources>
    <string name="app_name">iSensor</string>
    <!--Opcion lista de sensores -->
    <string name="lista">Lista de sensores</string>
    <!--Opcion proximidad -->
    <string name="proximidad">Sensor de proximidad</string>
    <!--Opcion temperatura -->
    <string name="ambiente">Sensores adicionales</string>
    <string name="luz">Sensor de luz</string>
    <string name="temperatura">Sensor de Aproximidad</string>
    <string name="reset">Reiniciar</string>
    <string name="gravedad">Gravedad</string>
    <string name="brujula">Brújula</string>
    <string name="AxisX">Axis X: </string>
    <string name="AxisY">Axis Y: </string>
    <string name="AxisZ">Axis Z: </string>

</resources>