<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".EnviromenntActivity">

    <TextView
        android:id="@+id/tvwTituloSensores2"
        android:layout_width="232dp"
        android:layout_height="70dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="90dp"
        android:fontFamily="@font/amatic_sc_bold"
        android:text="@string/app_name"
        android:textAlignment="inherit"
        android:textSize="60sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="105dp"
        android:layout_height="81dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutCompat"
        app:layout_constraintEnd_toStartOf="@+id/tvwTituloSensores2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sensor" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:onClick="Sensor2"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvwTituloSensores2"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/btnEnviromentTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Sensor2"
            android:text="@string/temperatura" />

        <Button
            android:id="@+id/btnEnvironmentGravity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gravedad" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>